--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
 	"name": "Chart.Scatter.js",
-	"version": "1.1.3",
+	"version": "1.1.4",
 	"description": "Scatter chart type for the Chart.js library",
 	"author": "dima117",
 	"main": "Chart.Scatter.js",
@@ -16,6 +16,6 @@
 		"!README.md"
 	],
 	"dependencies": {
-		"Chart.js": "~1.0.2"
+		"Chart.js": "1.1.1"
 	}
 }
